--- a/JigsawBot/JigsawBot.csproj
+++ b/JigsawBot/JigsawBot.csproj
@@ -63,6 +63,7 @@
     <Compile Include="BotClient.cs" />
     <Compile Include="DataBase\Models\CompletedPuzzleModel.cs" />
     <Compile Include="DataBase\Models\PuzzleData.cs" />
+    <Compile Include="Modules\BotActions.cs" />
     <Compile Include="Modules\GeneralModule.cs" />
     <Compile Include="Modules\PuzzleModule.cs" />
     <Compile Include="Program.cs" />
@@ -80,9 +81,7 @@
     <None Include="config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Content Include="ProjectDB.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="ProjectDB.db" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper">
