--- a/JigsawBot/JigsawBot.csproj
+++ b/JigsawBot/JigsawBot.csproj
@@ -61,8 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BotClient.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="DataBase\Models\CompletedPuzzleModel.cs" />
-    <Compile Include="DataBase\Models\PuzzleData.cs" />
+    <Compile Include="DataBase\PuzzleData.cs" />
     <Compile Include="Modules\BotActions.cs" />
     <Compile Include="Modules\GeneralModule.cs" />
     <Compile Include="Modules\PuzzleModule.cs" />
