Added local backup service. Reorganized data folder.

--- a/JigsawBot/config.json
+++ b/JigsawBot/config.json
@@ -1,6 +1,9 @@
 {
   "prefix": "!",
 
+  "backup_path": "C:\\JigsawData\\backup_path",
+  "logs_path": "C:\\JigsawData\\logs", 
+
   "channels": {
     "greeting": "",
     "notifications": "",
