--- a/JigsawBot/App.config
+++ b/JigsawBot/App.config
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <add name ="ProjectDB"
+         providerName="System.Data.Sqlite"
+         connectionString="Data Source= C:\JigsawData\ProjectDB.db;Version=3;"/>
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
