--- a/JigsawBot/config.json
+++ b/JigsawBot/config.json
@@ -8,7 +8,8 @@
     "greeting": "",
     "notifications": "",
     "leaderboard": "",
-    "voice": "" 
+    "voice": "",
+    "logs": ""    
   },
 
   "messages": {
