--- a/JigsawBot/JigsawBot.csproj
+++ b/JigsawBot/JigsawBot.csproj
@@ -1,17 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4ABCC65C-A574-4894-BDB1-5EEAC224162E}</ProjectGuid>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
-    <RootNamespace>JigsawBot</RootNamespace>
-    <AssemblyName>JigsawBot</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -27,66 +17,12 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
     <OutputPath>C:\JigsawData\bot\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BotContainer.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="DataBase\IDataAccess.cs" />
-    <Compile Include="DataBase\Models\CompletedPuzzleModel.cs" />
-    <Compile Include="DataBase\Models\QuoteModel.cs" />
-    <Compile Include="DataBase\PuzzleData.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="Modules\AdminModule.cs" />
-    <Compile Include="Modules\BotActions.cs" />
-    <Compile Include="Modules\DebugModule.cs" />
-    <Compile Include="Modules\GeneralModule.cs" />
-    <Compile Include="Modules\PuzzleModule.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataBase\Models\PuzzleModel.cs" />
-    <Compile Include="DataBase\Models\PuzzleDataModel.cs" />
-    <Compile Include="Services\BackupService.cs" />
-    <Compile Include="Services\CommandHandler.cs" />
-    <Compile Include="Services\LoggingService.cs" />
-    <Compile Include="Services\StartupService.cs" />
-    <Compile Include="DataBase\SqliteDataAccess.cs" />
-    <Compile Include="DataBase\Models\UserModel.cs" />
-    <Compile Include="Services\QuotesService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="config.json" />
     <Content Include="ProjectDB.db" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +32,7 @@
     <PackageReference Include="Discord.Net">
       <Version>2.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration">
       <Version>3.1.9</Version>
     </PackageReference>
@@ -124,6 +61,4 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
